--- a/Macrosoft/nav_arrow.css
+++ b/Macrosoft/nav_arrow.css
@@ -38,13 +38,13 @@
 #nav-button--prev {
   top: 58rem;
   /* top: 80% */
-  left: 45%;
+  left: 44%;
 }
 
 #nav-button--next {
   top: 58rem;
   /* top: 80% */
-  right: 45%;
+  right: 44%;
 }
 
 #nav-button--prev::after,
@@ -84,15 +84,15 @@
   height: 1.2rem;
   width: 1.2rem;
   border-radius: 50%;
-  border: 1px #fff solid;
-  background-color: #333;
+  border: 1px black solid;
+  background-color: white;
   opacity: 1;
   margin: 0 1rem 0 1rem;
   cursor: pointer;
 }
 
 .slider__navlink.active {
-  background-color: #fff;
+  background-color: black;
   border: 1px #333 solid;
 }
 
