--- a/NenjaVan/style.css
+++ b/NenjaVan/style.css
@@ -236,6 +236,12 @@ body {
   border-right: 1px #c2002f solid;
 }
 
+.stats-sub-grid,
+.stats-sub-grid_2 {
+  padding-right: 0.3rem;
+  padding-left: 0.3rem;
+}
+
 /* WHY US */
 .why-us {
   padding: 0 18rem;
