--- a/Hahamove/queries.css
+++ b/Hahamove/queries.css
@@ -183,7 +183,7 @@
   .stats-sub-grid {
     background-color: #ff671d;
     width: 100%;
-    height: 16rem;
+    height: 18rem;
   }
 
   .findout {
@@ -193,15 +193,15 @@
   .slider__nav,
   #nav-button--prev,
   #nav-button--next {
-    top: 28rem;
+    top: 22rem;
   }
 
   #nav-button--prev {
-    left: 30%;
+    left: 26%;
   }
 
   #nav-button--next {
-    right: 30%;
+    right: 26%;
   }
 
   .description {
@@ -213,6 +213,27 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 2rem;
+  }
+
+  .description-right h1 {
+    font-size: 4rem;
+  }
+
+  .vehicle-flex {
+    display: flex;
+    gap: 1rem;
+  }
+
+  .vehicle-flex img {
+    width: 8rem;
+  }
+
+  .content-grid {
+    margin-left: 1rem;
+    width: 100%;
+    column-gap: 4rem;
+    border: 2px solid #ff671d;
+    padding: 1rem;
   }
 
   .download1 {
