--- a/Hahamove/style_v2.css
+++ b/Hahamove/style_v2.css
@@ -110,6 +110,7 @@
   grid-template-columns: 1fr 2fr;
   text-align: left;
   row-gap: 2rem;
+  column-gap: 2rem;
   font-size: 1.4rem;
   border: 3px solid #ff671d;
   padding: 2rem;
