--- a/Benjamin Darker/queries.css
+++ b/Benjamin Darker/queries.css
@@ -192,17 +192,32 @@
   }
 
   .introduction {
-    height: 60rem;
+    height: 45rem;
   }
 
   .introduction-left {
-    margin-top: 20rem;
+    margin-top: 15rem;
+  }
+
+  .introduction-left h1 {
+    font-size: 2rem;
+    line-height: 5rem;
+    margin-bottom: 1rem;
+  }
+
+  .introduction-left div {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+  }
+
+  .introduction-left a {
+    font-size: 1.4rem;
   }
 
   .slider__nav,
   #nav-button--prev,
   #nav-button--next {
-    top: 55rem;
+    top: 40rem;
   }
 
   #nav-button--prev {
@@ -212,10 +227,14 @@
     right: 25%;
   }
 
+  .description1 {
+    gap: 2rem;
+  }
+
   .catalogue-slide {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 3rem;
+    column-gap: 1rem;
     row-gap: 2rem;
     max-width: 100%;
     margin: 0 auto;
@@ -225,13 +244,23 @@
     color: #203a36;
   }
 
+  .wedding a {
+    font-size: 1rem;
+    padding: 1rem 1rem;
+  }
+
   .slider__wedding {
-    top: 30rem;
+    top: 22rem;
+  }
+
+  .slider__weddinglink {
+    height: 0.8rem;
+    width: 0.8rem;
   }
 
   #wedding-button--prev,
   #wedding-button--next {
-    top: 15rem;
+    top: 8rem;
   }
 
   #wedding-button--prev {
