--- a/Benjamin Darker/queries.css
+++ b/Benjamin Darker/queries.css
@@ -221,10 +221,10 @@
   }
 
   #nav-button--prev {
-    left: 25%;
+    left: 20%;
   }
   #nav-button--next {
-    right: 25%;
+    right: 20%;
   }
 
   .description1 {
@@ -249,8 +249,12 @@
     padding: 1rem 1rem;
   }
 
+  .wedding-slide img {
+    width: 90%;
+  }
+
   .slider__wedding {
-    top: 22rem;
+    top: 26rem;
   }
 
   .slider__weddinglink {
@@ -260,18 +264,18 @@
 
   #wedding-button--prev,
   #wedding-button--next {
-    top: 8rem;
+    top: 12rem;
   }
 
   #wedding-button--prev {
-    left: 5%;
+    left: 0%;
   }
   #wedding-button--next {
-    right: 5%;
+    right: 0%;
   }
 
   .contact {
-    margin-top: 45rem;
+    margin-top: 30rem;
   }
   .tailor img {
     width: 80%;
