--- a/style.css
+++ b/style.css
@@ -448,6 +448,17 @@ body {
   font-size: 4.4rem;
   line-height: 1.2;
   padding-top: 4.8rem;
+  padding-bottom: 1.2rem;
+  margin-bottom: 4.8rem;
+  color: #e2dfd2;
+  text-align: center;
+  font-weight: 700;
+}
+
+.heading-secondary-work2 {
+  font-size: 2rem;
+  line-height: 1.2;
+  /* padding-top: 4.8rem; */
   padding-bottom: 4.8rem;
   margin-bottom: 4.8rem;
   color: #e2dfd2;
