--- a/Parallax/queries.css
+++ b/Parallax/queries.css
@@ -4,6 +4,15 @@
     font-size: 60%;
   }
 
+  .caption {
+    position: absolute;
+    left: 0;
+    top: 75%;
+    width: 100%;
+    text-align: center;
+    color: #000;
+  }
+
   .caption span.border {
     background-color: black;
     color: #fff;
@@ -35,7 +44,7 @@
 
   .intro {
     text-align: center;
-    font-size: 20px;
+    font-size: 14px;
     letter-spacing: 2px;
     padding: 10px 10px;
   }
