--- a/Weather/style.css
+++ b/Weather/style.css
@@ -24,7 +24,7 @@ body {
   transition: 0.5s ease-out;
 }
 
-.search {
+.search-box {
   width: 100%;
   display: flex;
   align-items: center;
@@ -171,5 +171,5 @@ body {
   text-align: left;
   max-height: 100%;
   transition: 0.5s ease-out;
-  font-size: 14px;
+  font-size: 12px;
 }
